# turbine

./: .gitignore  Cargo.toml  README.md
components/bot/: Cargo.toml
components/bot/src/: cache.rs  gateway.rs  http.rs  lib.rs
components/engine/: Cargo.toml
components/engine/src/: instance.rs  lib.rs  limiter.rs  plugin.rs
components/engine/src/linker/: mod.rs
components/scheduler/: Cargo.toml
components/scheduler/src/: lib.rs  runtime.rs
components/store/: Cargo.toml
components/store/src/: lib.rs
components/store/src/mongodb_provider/: deployments.rs  mod.rs  plugins.rs
components/store/src/traits/: deployments.rs  mod.rs  plugins.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  context.rs  main.rs
server/src/services/: discord.rs  engine.rs  mod.rs  plugins.rs
